# facettenschach-backend

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/v1/: category.py  deps.py
app/core/: config.py  database.py
app/crud/: category.py
app/models/: category.py
app/schemas/: category.py
