[project]
name = "facettenschach-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "boto3[awscrt]>=1.40.6",
    "fastapi>=0.116.1",
    "fastapi-mail>=1.5.0",
    "fastapi-users>=14.0.1",
    "psycopg2[binary]>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "python-jose>=3.5.0",
    "ruff>=0.12.8",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
